--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,15 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "superjson": "^1.7.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.39",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-superjson-next": "^0.2.3",
     "typescript": "^4.2.4"
   }
 }
